--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
                         <span class="value">75%</span>
                     </div>
 
-                    <div class="skills">
+                    <!-- <div class="skills">
                         <span class="name">Express</span>
                         <div class="percent">
                             <div class="progress" style="width: 65%;"></div>
                         </div>
                         <span class="value">75%</span>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
