--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
                         <span class="value">75%</span>
                     </div>
 
-                    <div class="skills">
+                    <!-- <div class="skills">
                         <span class="name">Express</span>
                         <div class="percent">
                             <div class="progress" style="width: 65%;"></div>
                         </div>
                         <span class="value">75%</span>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
@@ -170,13 +170,13 @@
                 <h1 class="text-capitalice title-h1 tituloP">Experience in</h1>
             </div>
 
-            <div class="button-group">
+            <!-- <div class="button-group">
                 <button type="button" class="active activeP" id="btn1" data-filter="*">All</button>
                 <!-- <button type="button" data-filter=".personal">Personal</button>
                 <button type="button" data-filter=".empresas">Business</button>
                 <button type="button" data-filter=".blog">Blogs</button>
                 <button type="button" data-filter=".school">Schools</button> -->
-            </div>
+            </div> -->
 
             <div class="row grid">
                 <div class="col-lg-4 col-md-6 col-sm-12 element-item personal">
