--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <section class="project-area">
         <div id="hobby" class="container">
             <div class="project-title pb-5">
-                <h1 class="text-capitalice title-h1 tituloP">Experience in</h1>
+                <h1 class="text-capitalice title-h1 tituloP">Experience</h1>
           </div>
 
             <div class="row grid">
