--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
                 <div class="containerText">
                     <h2>Launch</h2>
-                    <p>After all the designing and coding part we will launch our website.</p>
+                    <p>After all the designing and coding part we will launch your website.Your website is the perfect place to house all of the great content your business creates to inform and engage your target audience – just like the blog post you're reading right now, that's providing you with more information. Your website also plays an important role in your email marketing</p>
                     <a href="#"><span>Know More</span></a>
                 </div>
 
