--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
                         <span class="value">70%</span>
                     </div>
 
-                    <div class="skills">
+                    <!-- <div class="skills">
                         <span class="name">React</span>
                         <div class="percent">
                             <div class="progress" style="width: 65%;"></div>
                         </div>
                         <span class="value">75%</span>
-                    </div>
+                    </div> -->
 
                     <div class="skills">
                         <span class="name">NodeJs</span>
@@ -361,12 +361,12 @@
         </div>
     </div>
 
-    <footer>
+    <!-- <footer>
         <div class="networksFooter">
             <p>&copy; 2021, All Rights recived - Anoop Peter</p>
         </div>
 
-    </footer>
+    </footer> -->
     <script src="js/plugins/bootstrap.min.js"></script>
     <script src="js/plugins/typed.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
