--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
                 </div>
            
 
-                <div id="skills" class="containerSkill">
-                    <h1>my skills</h1>
+<!--                 <div id="skills" class="containerSkill">
+<!--                     <h1>my skills</h1>
                     <div class="skills">
                         <span class="name">HTML</span>
                         <div class="percent">
                             <div class="progress" style="width: 90%;"></div>
                         </div>
                         <span class="value">90%</span>
-                    </div>
+                    </div> -->
 
-                    <div class="skills">
+<!--                     <div class="skills">
                         <span class="name">CSS</span>
                         <div class="percent">
                             <div class="progress" style="width: 75%;"></div>
@@ -126,7 +126,7 @@
                             <div class="progress" style="width: 80%;"></div>
                         </div>
                         <span class="value">70%</span>
-                    </div>
+                    </div> -->
 
                     <!-- <div class="skills">
                         <span class="name">React</span>
@@ -136,13 +136,13 @@
                         <span class="value">75%</span>
                     </div> -->
 
-                    <div class="skills">
+<!--                     <div class="skills">
                         <span class="name">NodeJs</span>
                         <div class="percent">
                             <div class="progress" style="width: 75%;"></div>
                         </div>
                         <span class="value">75%</span>
-                    </div>
+                    </div> -->
 
                     <!-- <div class="skills">
                         <span class="name">Express</span>
@@ -151,7 +151,7 @@
                         </div>
                         <span class="value">75%</span>
                     </div> -->
-                </div>
+<!--                 </div> --> -->
 
             </div>
         </div>
@@ -362,12 +362,12 @@
         </div>
     </div>
 
-    <!-- <footer>
+    <footer>
         <div class="networksFooter">
             <p>&copy; 2021, All Rights recived - Anoop Peter</p>
         </div>
 
-    </footer> -->
+    </footer>
     <script src="js/plugins/bootstrap.min.js"></script>
     <script src="js/plugins/typed.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
