--- a/index.html
+++ b/index.html
@@ -362,12 +362,12 @@
         </div>
     </div>
 
-    <footer>
+<!--     <footer>
         <div class="networksFooter">
             <p>&copy; 2021, All Rights recived - Anoop Peter</p>
         </div>
 
-    </footer>
+    </footer> -->
     <script src="js/plugins/bootstrap.min.js"></script>
     <script src="js/plugins/typed.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
