--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                 </div>
            
 
-<!--                 <div id="skills" class="containerSkill">
-<!--                     <h1>my skills</h1>
+                 <div id="skills" class="containerSkill">
+                   <h1>my skills</h1>
                     <div class="skills">
                         <span class="name">HTML</span>
                         <div class="percent">
@@ -112,7 +112,7 @@
                         <span class="value">90%</span>
                     </div> -->
 
-<!--                     <div class="skills">
+                    <div class="skills">
                         <span class="name">CSS</span>
                         <div class="percent">
                             <div class="progress" style="width: 75%;"></div>
@@ -126,32 +126,32 @@
                             <div class="progress" style="width: 80%;"></div>
                         </div>
                         <span class="value">70%</span>
-                    </div> -->
+                    </div> 
 
-                    <!-- <div class="skills">
+                     <div class="skills">
                         <span class="name">React</span>
                         <div class="percent">
                             <div class="progress" style="width: 65%;"></div>
                         </div>
                         <span class="value">75%</span>
-                    </div> -->
+                    </div> 
 
-<!--                     <div class="skills">
+                  <div class="skills">
                         <span class="name">NodeJs</span>
                         <div class="percent">
                             <div class="progress" style="width: 75%;"></div>
                         </div>
                         <span class="value">75%</span>
-                    </div> -->
+                    </div> 
 
-                    <!-- <div class="skills">
+                     <div class="skills">
                         <span class="name">Express</span>
                         <div class="percent">
                             <div class="progress" style="width: 65%;"></div>
                         </div>
                         <span class="value">75%</span>
-                    </div> -->
-<!--                 </div> --> -->
+                    </div>
+                </div> 
 
             </div>
         </div>
